--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -35,12 +35,12 @@
           - "{{ convert2rhel_package_url }}"
         state: present
 
-    - name: Add 7Server to file /etc/yum/vars/releasever if it does not exist on CentOS systems
+    - name: "Add {{ ansible_distribution_major_version }}Server to file /etc/yum/vars/releasever if it does not exist on this CentOS {{ ansible_distribution_major_version }} system"
       lineinfile:
         path: /etc/yum/vars/releasever
-        line: 7Server
+        line: "{{ ansible_distribution_major_version }}Server"
         create: yes
-      when: ansible_distribution == 'CentOS'
+      when: (ansible_distribution == 'CentOS' and ansible_distribution_major_version == '6') or (ansible_distribution == 'CentOS' and ansible_distribution_major_version == '7')
 
     - block:
         - name: Install required packages on Oracle
