--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -57,8 +57,13 @@
 
       when: ansible_distribution == 'OracleLinux' 
 
+    - name: Install Katello CA certificate for Satellite
+      yum:
+        name: "http://{{ satellite_host }}/pub/katello-ca-consumer-latest.noarch.rpm"
+        state: present
+
     - name: Launch conversion asynchronously
-      command: convert2rhel -u {{ rhsm_username }} -p {{ rhsm_password }} --pool {{ rhsm_pool }} -v {{ rhel_variant }} -y
+      command: convert2rhel -k {{ satellite_activationkey }} -o {{ satellite_organization }} -a -v {{ rhel_variant }} -y
       async: "{{ convert2rhel_timeout }}"
       poll: 0
       register: convert2rhel_async
@@ -74,6 +79,37 @@
     - name: Reboot machine with a 15 minutes timeout
       reboot:
         reboot_timeout: 900
+
+    - name: Install required packages for Insights
+      yum:
+        name:
+          - katello-agent
+          - katello-host-tools
+          - katello-host-tools-tracer
+          - insights-client
+        state: present
+
+    - name: Retrieve Satellite SSH public key in temporary file
+      get_url:
+        url: "https://{{ satellite_host }}:9090/ssh/pubkey"
+        validate_certs: no
+        dest: /tmp/sat_pub_key
+        owner: root
+        group: root
+        mode: 0600
+
+    - name: Add Satellite SSH public key to authorized keys
+      lineinfile:
+        path: /root/.ssh/authorized_keys
+        line: "{{ lookup('file', '/tmp/sat_pub_key') }}"
+
+    - name: Remove temporary Satellite SSH public key file
+      file:
+        path: /tmp/sat_pub_key
+        state: absent
+
+    - name: Register machine to Insights
+      command: insights-client --register
 
   rescue:
     - name: Revert snapshot to previous state
