--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -36,11 +36,13 @@
     snapshot_mode: "cold"
 
 - block:
-    - name: Install convert2rhel package
+    - name: Install convert2rhel and Katello CA packages
       yum:
         name:
           - "{{ convert2rhel_package_url }}"
+          - "http://{{ satellite_host }}/pub/katello-ca-consumer-latest.noarch.rpm"
         state: present
+        update_cache: yes
 
     - name: "Add {{ ansible_distribution_major_version }}Server to file /etc/yum/vars/releasever if it does not exist on this CentOS {{ ansible_distribution_major_version }} system"
       lineinfile:
@@ -63,9 +65,6 @@
             state: absent
 
       when: ansible_distribution == 'OracleLinux' 
-
-    - name: Install Katello CA certificate for Satellite
-      command: "yum install http://{{ satellite_host }}/pub/katello-ca-consumer-latest.noarch.rpm"
 
     - name: Launch conversion asynchronously
       command: convert2rhel -k {{ satellite_activationkey }} -o {{ satellite_organization }} -a -v {{ rhel_variant }} -y
