--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -92,7 +92,7 @@
     - name: Copy redhat-release-server package to host
       copy:
         src: "/tmp/{{ ansible_hostname }}/{{ redhat_release_filename }}"
-        dst: /usr/share/convert2rhel/redhat-release/Server
+        dest: /usr/share/convert2rhel/redhat-release/Server
 
     - name: "Add {{ ansible_distribution_major_version }}Server to file /etc/yum/vars/releasever if it does not exist on this CentOS {{ ansible_distribution_major_version }} system"
       lineinfile:
