--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,8 +12,7 @@ galaxy_info:
   - name: EL
     versions:
     - 7
-
   galaxy_tags:
     - ims
   dependencies:
-    - ims.vm_snapshot_rhevm
+    - fdupont_redhat.ims_manageiq_vm_snapshot
